client/master.css
#landingBody {
  position: absolute; top: 0; left: 0
  overflow-x: hidden;
  background-image: url("background.jpg");
  background-repeat: none;
  /*position:fixed;*/
    width:100%;
    height:100%;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-size: cover;
}
#landingBodyPane {
  display: block;
  position: relative;
  top: 120px;
  height: 200px;
  width: 600px;
  margin: auto;
  border-radius: 10px;
}
#landingBodyPane .form-control{
  height: 60px;
  width: 525px;
  font-size:30px;
  font-weight: 100;
  opacity: 0.5;
  background-color: #d4d4d4
  border-radius: 7px;
}
#landingLogo{
  width: 120px;
  height: auto;
  padding: 15px;
}
#navLogo{
  width: 80px;
  height: auto;
}
#landingBody h1 {
  opacity: 1;
  color: white;
  font-weight: 100;
  font-size: 50px;
  margin: 10px;
  margin-bottom: 20px;
}


body {
  padding-top: 90px;
  font-family: 'Helvetica Neue';
  background-color: #f9f9f9;

}

#loginInputs {
  text-align: center;
}

h1, h2, h3, h4  {
  font-family: 'Helvetica Neue';
}
.navbar-brand{
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 20px;
  font-weight: bolder;
}
#login{
  width: 500px;
  padding: 20px;
}

#emailError {
  text-align:center;
  margin: auto;
}

.form-group {
  border: 1px solid #f9f9f9;
  margin: 10px;
  border-radius: 5px;
}
.form-control {
  border: 1px solid #f9f9f9;
  margin: 10px;
}
.btn {
  border: 1px solid #f9f9f9;
  margin: 10px;
}
#CreateAndSearchTripsLeft{
  width: 50%;
  padding-left: 0px;
  border: 0px;
  margin: 0px;
}
#CreateAndSearchTripsRight{
  width: 50%;
  padding-right: 0px;
  border: 0px;
  margin: 0px;
}


#tripEntry {
  font-style: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  border: 2px solid;
  border-radius: 5px;
  margin-bottom: 20px;
  background-color: #dceaea;

}

.spinner {
  position: fixed;
  height: 160px;
  width: 160px;
  overflow: show;
  margin: auto;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

#tripTag {
  font-size:16px;
  font-weight: bold;
}

.other {
  border: 1px solid;
}

p {
  margin: 0 0 4px;
}

#rsvpButton {
  text-align: center;
  float: right;
  border-radius: 4px;
  border: 1px solid #f9f9f9;*/
}
.Welcome{
  color: white;
  height: auto;
}

